Adicionado testes unitarios